# sxs

./: .codecov.yml  .gitignore  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  LICENSE  MANIFEST.in  Pipfile  README.md  juliapkg.json  mkdocs.yml  mkdocs_preprocess.py  pipify.sh  pyproject.toml  requirements.txt  setup.py  setup_helpers.py
.github/ISSUE_TEMPLATE/: catalog-data-issue-template.md
.github/workflows/: build.yml  pr_rtd_link.yml
SpEC/metadata/: __init__.py  catalog.py  parse_catalog.py  parse_metadata.py  symlink_runs.py
docs/: api.md  conf.py  environment.yml  index.rst  julia.md  mathematica.md  modules.rst  sxs.data.api.rst  sxs.data.rst  sxs.doi.rst  sxs.doxygen.rst  sxs.format.lvc.rst  sxs.format.rst  sxs.metadata.rst  sxs.references.rst  sxs.rst  sxs.utilities.decimation.rst  sxs.utilities.rst  sxs.validate.rst  sxs.zenodo.api.rst  sxs.zenodo.rst
docs/api/: catalog.md  cite.md  horizons.md  load.md  metadata.md  simulation.md  simulations.md  time_series.md  waveforms.md
docs/html/: main.html
docs/stylesheets/: extra.css
docs/tutorials/: 00-Introduction.ipynb  01-Catalog_Dataframe.ipynb  01-Metadata.ipynb  01-Simulations_and_Metadata.ipynb  02-Catalog.ipynb  02-Simulation.ipynb  03-Horizons.ipynb  05-Preprocessing.ipynb  05-PreprocessingForFFTs.ipynb  sample_CCE.h5  sample_CCE.json
scripts/: sxs
sxs/: __init__.py  __version__.py  citation.py  handlers.py  juliapkg.json  loader.py  loading.py  time_series.py
sxs/PYPostNewtonian/Code/: PNCodeGen.ipynb  PNEvolution.py  PostNewtonian.py
sxs/PYPostNewtonian/PNTerms/: AngularMomentum.ipynb  EnergyAbsorption.ipynb  Flux.ipynb  OrbitalEvolution.ipynb  PNEvolution.py  Precession.ipynb  Variables.ipynb  WaveformModes.ipynb
sxs/PYPostNewtonian/PNTerms/PolynomialRatios/: PolynomialRatioCalculator.py
sxs/PYPostNewtonian/Utilities/: CodeOutput.py  PNObjects.py
sxs/PostNewtonian/: PNPsiMModes.py  PNWaveformModes.py  PostNewtonian.py
sxs/PostNewtonian/CodeGen/Code/: PNCodeGen.ipynb  PNCodeGenPsiM.ipynb  PNEvolution.py  PNWaveformModes.py  PostNewtonian.py
sxs/PostNewtonian/CodeGen/Code/1/: PNEvolution.py  PNWaveformModes.py
sxs/PostNewtonian/CodeGen/PNTerms/: BindingEnergy.ipynb  Mma_To_Py.ipynb  OrbitalEvolution.ipynb  PsiMModes.ipynb  Variables_Q.ipynb  WaveformModes.ipynb
sxs/PostNewtonian/CodeGen/Utilities/: ExecNotebook.ipy  __init__.py
sxs/caltechdata/: __init__.py  catalog.py  login.py
sxs/caltechdata/api/: __init__.py  deposit.py  login.py  records.py
sxs/catalog/: __init__.py  catalog.py  create.py  description.py
sxs/data/: __init__.py  horizons.py  metadata.py  time_series.py
sxs/data/api/: __init__.py  login.py
sxs/data/formats/: __init__.py  bbh_horizons.py
sxs/data/horizons/: __init__.py  spec_horizons_h5.py  xor_multishuffle_bzip2.py
sxs/data/waveforms/: __init__.py  corotating_paired_xor.py  waveform_mixin.py  waveform_signal.py
sxs/doi/: __init__.py  api.py
sxs/doxygen/: validate_xml.py
sxs/format/: __init__.py
sxs/format/lvc/: __init__.py  compare.py  comparisons.py  horizons.py  metadata.py  waveforms.py
sxs/formats/: __init__.py
sxs/formats/lvc/: __init__.py  horizons.py  metadata.py  waveforms.py
sxs/horizons/: __init__.py  spec_horizons_h5.py  xor_multishuffle_bzip2.py
sxs/julia/: GWFrames.py  __init__.py
sxs/lvcnr/: __init__.py  comparisons.py  conversion.py  dataset.py  horizons.py  waveform_amp_phase.py  waveforms.py
sxs/metadata/: __init__.py  catalog.py  container.py  field_mapping.py  fields.py  initial_data.py  metadata.py  metric.py  web.py
sxs/postNewtonian/Eccentric/: EccPNEvolution.py  EccPNWaveformModes.py  EccPostNewtonian.py
sxs/postNewtonian/nonEccentric/: PNEvolution.py  PNPsiMModes.py  PNWaveformModes.py  PostNewtonian.py
sxs/references/: ads.py  arxiv.py  fairchild_report.py  inspire.py  references.py
sxs/simulations/: __init__.py  analyze.py  local.py  rit_simulation.py  simulation.py  simulations.py
sxs/utilities/: __init__.py  bitwise.py  dicts.py  downloads.py  files.py  formats.py  inspire.py  monotonicity.py  pretty_print.py  select.py  smooth_functions.py  string_converters.py  sxs_directories.py  sxs_identifiers.py  url.py
sxs/utilities/decimation/: __init__.py  greedy_spline.py  linear_bisection.py  peak_greed.py  suppress.py  suppression.py
sxs/utilities/lvcnr/: __init__.py  comparisons.py  conversion.py  dataset.py  horizons.py  waveform_amp_phase.py  waveforms.py
sxs/utilities/references/: __init__.py  arxiv.py  fairchild_report.py  inspire.py  journal_abbreviations.py  references.py
sxs/utilities/refinement/: greedy_spline.py  linear_bisection.py
sxs/validate/: __init__.py  bbh.py  bhns.py  nsns.py
sxs/waveforms/: __init__.py  alignment.py  flux.py  memory.py  mode_utilities.py  norms.py  nrar.py  rotating_paired_diff_multishuffle_bzip2.py  rotating_paired_xor_multishuffle_bzip2.py  transformations.py  waveform_grid.py  waveform_mixin.py  waveform_modes.py  waveform_mts.py
sxs/waveforms/format_handlers/: __init__.py  grathena.py  lvc.py  lvcnr.py  maya.py  nrar.py  rotating_paired_diff_multishuffle_bzip2.py  rotating_paired_xor_multishuffle_bzip2.py  spectre_cce_v1.py
sxs/waveforms/preprocessing/: __init__.py  preprocessor.py  taper_functions.py
sxs/zenodo/: __init__.py  api.py  backup.py  catalog.py  creators.py  deposition.py  download.py  login.py  simannex.py  surrogatemodeling.py
sxs/zenodo/api/: __init__.py  deposit.py  login.py  records.py  utilities.py
tests/: conftest.py  test_alignment.py  test_catalog.py  test_horizons.py  test_julia.py  test_loader.py  test_metadata.py  test_preprocessing.py  test_simulation.py  test_time_series.py  test_transformations.py  test_utilities.py  test_waveform_rotations.py  test_waveforms.py
