[tool.poetry]
name = "sxs"
version = "2022.3.2"
description = "Interface to data produced by the Simulating eXtreme Spacetimes collaboration"
readme = "README.md"
license = "MIT"
authors = ["Michael Boyle <michael.oliver.boyle@gmail.com>"]
homepage = "https://github.com/sxs-collaboration/sxs"
include = ["tests"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.20"
scipy = "^1.0"
numba = {version = ">=0.55", markers = "implementation_name == 'cpython'"}
mkapi = {version = "1.0.13", optional = true, python = ">=3.7"}
quaternionic = "^1.0"
spherical = "^1.0"
h5py = "^3"
inflection = "^0.5.1"
requests = "^2.24.0"
pytest-forked = "^1.3.0"
tqdm = "^4.48.2, <4.61.2"
pytz = "^2020.1"
urllib3 = "^1.25.10"
pandas = "^1.1.2"
mkdocs = {version = ">=1.1.2", optional = true, markers = "implementation_name == 'cpython'"}
black = {version = ">=22.1", optional = true, markers = "implementation_name == 'cpython'"}
pymdown-extensions = {version = "^8", optional = true, markers = "implementation_name == 'cpython'"}
spinsfast = {version = ">=2022", optional = true, markers = "sys_platform != 'win32'"}
ipywidgets = {version = "^7.5.1", optional = true}
ipykernel = {version = "^5.3.4", optional = true}
jupyter_contrib_nbextensions = {version = "^0.5.1", optional = true}
jupyterlab = {version = "^2.2.8", optional = true}
line_profiler = {version = "^3.0.2", optional = true}
memory_profiler = {version = "^0.57.0", optional = true}
matplotlib = {version = ">=2.1.1", optional = true}
sympy = {version = "^1.6.2", optional = true}
corner = {version = "^2.1.0", optional = true}
qgrid = {version = "^1.3.1", optional = true}
rise = {version = "^5.6.1", optional = true}
numpy-quaternion = {version = ">=0.3.1", optional = true}
scri = {version = ">=2020.8.18", optional = true, markers = "sys_platform != 'win32'"}
pylatexenc = "^2.7"
feedparser = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = ">=2.10.1"

[tool.poetry.extras]
mkdocs = ["mkdocs"]
mkapi = ["mkapi"]
pymdown-extensions = ["pymdown-extensions"]
ecosystem = ["ipywidgets", "ipykernel", "jupyter_contrib_nbextensions", "jupyterlab", "line_profiler", "memory_profiler", "matplotlib", "sympy", "corner", "qgrid", "rise", "quaternion", "scri"]

[tool.black]
line-length = 120
target-version = ['py38','py39','py310']

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".* build dist *.egg-info install notes ENV"
junit_family="xunit2"
addopts = "-s -v --doctest-glob='' --cov=sxs --cov-branch --cov-report xml"

[build-system]
requires = ["poetry-core>=1.0.1"]
build-backend = "poetry.core.masonry.api"
