[project]
name = "sxs"
dynamic = ["version"]
description = "Interface to data produced by the Simulating eXtreme Spacetimes collaboration"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  { name = "Michael Boyle", email = "michael.oliver.boyle@gmail.com" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
  "numpy >=1.20",
  "scipy >=1.7",
  "numba >=0.55; implementation_name == 'cpython'",
  "quaternionic >=1.0",
  "spherical >=1.0",
  "h5py >=3",
  "inflection >=0.5.1",
  "requests >=2.24.0",
  "tqdm >=4.63.1",
  "pytz >=2020.1",
  "urllib3 >=1.25.10",
  "pandas >=1.1.2",
  "juliacall >=0.9.20"
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocstrings-python",
  "mkdocs-material",
  "mkdocs-jupyter"
]
ecosystem = [
  "ipywidgets >=8.0",
  "ipykernel >=6.29",
  "jupyterlab >=4.2",
  "line_profiler >=3.0.2",
  "memory_profiler >=0.57.0",
  "matplotlib >=2.1.1",
  "numpy >=1.20, <2.0",
  "sympy >=1.6.2",
  "seaborn >=0.13",
  "qgridnext >=2.0",
  "rise >=5.6.1",
  "numpy-quaternion >=2023.0.4",
  "spinsfast >=2022; sys_platform != 'win32'",
  "scri >=2020.8.18; sys_platform != 'win32'"
]

[project.urls]
Homepage = "https://github.com/sxs-collaboration/sxs"
Documentation = "https://sxs.readthedocs.io/"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.version]
path = "sxs/__version__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-forked >=1.3.0",
  "juliapkg >=0.1.13",
  "numpy >=1.20, <2.0"
]
[tool.hatch.envs.default.scripts]
# Run these as `hatch run test`
test = "pytest {args:tests}"

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocstrings-python",
  "mkdocs-material",
  "mkdocs-jupyter"
]
[tool.hatch.envs.docs.scripts]
# Run these as `hatch run docs:build` or `hatch run docs:serve`
build = "mkdocs build --clean"
serve = "mkdocs serve --dev-addr localhost:8000"

# This is just a workaround; see https://github.com/danielfrg/mkdocs-jupyter/issues/154
[tool.hatch.envs.docs.env-vars]
JUPYTER_PLATFORM_DIRS = "1"

[tool.hatch.envs.notes]
dependencies = [
  "ipython",
  "matplotlib"
]


[tool.black]
line-length = 120
target-version = ["py38"]


[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".* build dist *.egg-info install notes ENV"
junit_family="xunit2"
addopts = "-s -v --doctest-glob='' --cov=sxs --cov-branch --cov-report xml"
